# mlterm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MLTERM_TRACKER_GUIDE.md  PYPI_DISTRIBUTION_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  TESTING_GUIDE.md  pyproject.toml  requirements.txt  setup.py  setup_dev.py  test_mlterm.py  test_simple.py
data/: generate_data.py
examples/: README.md  advanced_training.py  hyperparameter_tuning.py  iterative_training.py  linear_regression_training.py  long_decision_tree_training.py  simple_random_forest.py  simple_training.py  sklearn_training.py
mlterm/: __init__.py  cli.py  dashboard.py  system_monitor.py  tracker.py
tests/: conftest.py  test_tracker.py
