[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlterm"
version = "0.1.0"
description = "A Terminal-Based ML Experiment Tracker"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "mlterm contributors", email = "mlterm@example.com"}
]
maintainers = [
    {name = "mlterm contributors", email = "mlterm@example.com"}
]
keywords = [
    "machine-learning", "ml", "terminal", "tui", "experiment-tracking",
    "monitoring", "tracking", "logging", "dashboard", "cli", "offline",
    "ssh", "remote", "jsonl", "metrics", "hyperparameters", "artifacts"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
    "Topic :: Terminals",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
]

dependencies = [
    "textual>=0.40.0",
    "psutil>=5.9.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "filelock>=3.12.0",
]

[project.optional-dependencies]
gpu = [
    "GPUtil>=1.4.0",
]

[project.scripts]
mlterm = "mlterm.cli:app"

[project.urls]
Homepage = "https://github.com/mlterm/mlterm"
Repository = "https://github.com/mlterm/mlterm"
Documentation = "https://github.com/mlterm/mlterm#readme"
Issues = "https://github.com/mlterm/mlterm/issues"
Changelog = "https://github.com/mlterm/mlterm/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlterm*"]

[tool.setuptools.package-data]
mlterm = ["*.yml", "*.yaml"]
